# gadgify

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
fuzzer/: fuzzer.cpp
src/: ExecutableBinary.cpp  ExecutableBinary.h  File.cpp  File.h  Gadgify.cpp  Gadgify.h  PEFile.cpp  PEFile.h  ThreadPool.cpp  ThreadPool.h  WindowsTypes.h  main.cpp
